--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "babel src -d dist",
+    "prepare": "babel src -d dist",
     "test": "mocha --require @babel/register --recursive"
   },
   "browser": {
@@ -42,6 +43,7 @@
     "sinon": "^7.2.0"
   },
   "files": [
-    "src"
+    "src",
+    "dist"
   ]
 }
